# Epitech-Raytracer

./: .gitignore  CMakeLists.txt  README.md  build.sh
scenes/: ???.cfg  NoTexture.cfg  example.cfg  example_light.cfg
src/: main.cpp
src/Builder/: Builder.cpp  Builder.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/CreatePPM/: CreatePPM.cpp  CreatePPM.hpp  ICreatePPM.hpp
src/Errors/: Errors.hpp  ErrorsParsing.hpp  IErrors.hpp
src/Factory/: Factory.cpp  Factory.hpp
src/Object/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Planes.cpp  Planes.hpp  Sphere.cpp  Sphere.hpp  Triangles.cpp  Triangles.hpp
src/Observer/: Observer.cpp  Observer.hpp
src/Parsing/: IParsing.hpp  Parsing.cpp  Parsing.hpp
src/Parsing/LibConfig/: ILibConfig.hpp  LibConfig.cpp  LibConfig.hpp
src/Render/: IRender.hpp  Render.cpp  Render.hpp
src/Sfml/: Graphics.cpp  Graphics.hpp
src/Textures/: Interval.cpp  Interval.hpp  Textures.cpp  Textures.hpp  TexturesFromFiles.cpp  TexturesFromFiles.hpp
src/UtilsObject/Color/: Color.cpp  Color.hpp
src/UtilsObject/Hitable/: Hitable.hpp  Hitable_list.cpp  Hitable_list.hpp
src/UtilsObject/Materials/: Materials.hpp
src/UtilsObject/Ray/: Ray.cpp  Ray.hpp
src/UtilsObject/Vec3/: Vec3.cpp  Vec3.hpp
